--- a/folder3/css/style.css
+++ b/folder3/css/style.css
@@ -120,7 +120,7 @@ body {
   color: #3f2aff;
   background-image: url('../img/download.png');
   background-position: left center;
-  background-size: 20px 20px;
+  background-size: contain;
   background-repeat: no-repeat;
   padding-left: 30px;
 }
@@ -154,4 +154,9 @@ body {
   font-weight: 400;
   font-size: 14px;
   text-align: center;
+}
+.modules_container {
+  width: 1170px;
+  margin: 0 auto;
+  padding-top: 50px;
 }
