--- a/folder3/css/style.css
+++ b/folder3/css/style.css
@@ -147,7 +147,7 @@ body {
   font-size: 20px;
   color: #3f2aff;
 }
-.figure figcaption{
+.figure figcaption {
   border: 1px solid #b6b6b6;
   border-top: none;
   padding: 19px 0;
@@ -159,5 +159,60 @@ body {
   width: 1170px;
   margin: 0 auto;
   padding-top: 50px;
-  background-color: #070217;
+  font-family: 'Arial', 'sans-serif';
+}
+.logo {
+  display: block;
+  margin-bottom: 25px;
+}
+.a {
+  display: inline-block;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  font-style: normal;
+  color: #3F2AFF;
+  margin-bottom: 25px;
+}
+.modules_h1 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 69px;
+  color: #3F2AFF;
+  margin-bottom: 50px;
+}
+.m_modules_p {
+  margin: 0;
+  padding: 0;
+}
+.m_modules_p li {
+  list-style-type: none;
+}
+.modules_h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46px;
+  color: #3F2AFF;
+}
+.card_list {
+  padding: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 165%;
+  color: #333333;
+}
+.m_modules_ch {
+  display: block;
+  width: 575px;
+  height: 505px;
+  box-shadow: 5px 5px 30px rgba(0,0,0, 0.1);
+}
+.m_modules_ch img{
+  margin-bottom: 25px;
+}
+.card_content {
+  padding-left: 25px;
 }
