--- a/folder3/css/style.css
+++ b/folder3/css/style.css
@@ -165,6 +165,7 @@ body {
   display: block;
   margin-bottom: 25px;
 }
+
 .a {
   display: inline-block;
   font-weight: 400;
@@ -173,6 +174,11 @@ body {
   font-style: normal;
   color: #3F2AFF;
   margin-bottom: 25px;
+  background-image: url('../img/Arrow\ 1.svg');
+  background-repeat: no-repeat;
+  background-size: 45px;
+  background-position: left center;
+  padding-left: 50px;
 }
 .modules_h1 {
   font-style: normal;
@@ -186,6 +192,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 0;
+  display: block;
 }
 .m_modules_p li {
   list-style-type: none;
@@ -206,6 +213,7 @@ body {
   color: #333333;
 }
 .m_modules_ch {
+  padding: 0;
   position: relative;
   display: block;
   float: left;
@@ -239,9 +247,25 @@ body {
 .m_modules_ch:nth-child(3){
   margin-bottom: 50px;
 }
-/* .m_modules_ch:nth-child(4){
-  margin: 0;
-} */
-.btn{
-
+.m_modules_ch:nth-child(4){
+  margin-bottom: 50px;
 }
+.hidden{
+  visibility: hidden;
+}
+.btn{
+  display: block;
+  margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 2px solid #3F2AFF;
+  color: #3F2AFF;
+  padding: 24px 75px;
+  background-color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  margin-bottom: 50px;
+  cursor: pointer;
+}
+
